--- a/pom.xml
+++ b/pom.xml
@@ -43,13 +43,13 @@
 
 
         <!-- https://mvnrepository.com/artifact/com.googlecode.json-simple/json-simple -->
-        <!--dependency>
+        <dependency>
             <groupId>com.googlecode.json-simple</groupId>
             <artifactId>json-simple</artifactId>
             <version>1.1.1</version>
-        <!-/dependency>
+        </dependency>
 
-        <!- https://mvnrepository.com/artifact/org.apache.poi/poi -->
+        <!-- https://mvnrepository.com/artifact/org.apache.poi/poi -->
         <dependency>
             <groupId>org.apache.poi</groupId>
             <artifactId>poi</artifactId>
