--- a/src/test/resources/config.properties
+++ b/src/test/resources/config.properties
@@ -1,3 +1,4 @@
 #This is a sample properties file
-#Mon Jan 16 15:44:39 EST 2023
-programId=6773
+#Mon Jan 16 18:20:45 EST 2023
+programId=7368
+programName=Jan2873-InterfaceStrikers-SDAT570_553
