program and batch commit

--- a/src/test/resources/config.properties
+++ b/src/test/resources/config.properties
@@ -1,4 +1,6 @@
 #This is a sample properties file
-#Mon Jan 16 18:36:22 EST 2023
-programId=7437
-programName=Jan2873-InterfaceStrikers-SDAT570_47
+#Tue Jan 17 00:54:42 EST 2023
+batchId=4316
+batchName=Interface Strikers _488
+programId=8769
+programName=Jan2873-InterfaceStrikers-SDAT570_224
